# replicate_object_python

./: README.md  pyproject.toml
src/replicate_object/: __init__.py  class_testing.py  replicate_object.py
tests/: test_replicate_object.py
